--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ html(lang='en')
     header
       nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
         .container
-          a.navbar-brand(href='#') Humidity Tracker
+          a.navbar-brand(href='#') Lyapunov Labs
           button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
             span.navbar-toggler-icon
           #navbarSupportedContent.collapse.navbar-collapse
@@ -27,13 +27,13 @@ html(lang='en')
                   | More
                 ul.dropdown-menu.dropdown-menu-end(aria-labelledby='navbarDropdown')
                   li
-                    a.dropdown-item(href='#') Action
+                    a.dropdown-item(href='#') Products and Services
                   li
-                    a.dropdown-item(href='#') Another action
+                    a.dropdown-item(href='#') Contact
                   li
                     hr.dropdown-divider
                   li
-                    a.dropdown-item(href='#') Something else here
+                    a.dropdown-item(href='#') Try Now
 
     main
       .container
