--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,7 +13,7 @@ body, html {
 }
 
 header {
-  background-color: #007bff;
+  background-color: #32CD32;
   color: white;
   padding: 1rem 0;
   text-align: center;
@@ -31,33 +31,16 @@ main {
   max-width: 960px;
 }
 
-canvas {
-  width: 100% !important;
-  height: auto !important;
-}
-
-#videoStream {
-  width: 100%;
-  max-height: 480px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 // Responsive design adjustments for smaller screens
 @media (max-width: 768px) {
   main {
     flex-direction: column;
   }
-
-  canvas, #videoStream {
-    max-width: 100%;
-    height: auto;
-  }
 }
 
 // Enhancements for user interaction
 a.nav-link:hover, a.nav-link:focus {
-  background-color: #0056b3;
+  background-color: #2E8B57;
   color: #fff;
 }
 
